<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:id="@+id/fragment_myPage"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="320sp"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/misoramen_bokashi"
        android:foreground="@color/black_transparency"
        android:contentDescription="@string/login_contents_description"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/contentsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/userTopLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/shape_circle"
                android:contentDescription="@string/create_account_icon_text"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/create_account_username_hint"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/create_account_email_hint"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/account_origin_no_data"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/activityArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/account_activity_area_no_data"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/account_likes_no_data"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="10dp"
            android:text="@string/account_introduction_no_data"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center|start"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/login_title"
                android:textColor="@color/black"
                android:alpha="0.9"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:alpha="0.9"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/create_account_button_text"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>