<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_create_account"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/soy_sauce_ramen_with_chopsticks"
        android:contentDescription="@string/login_contents_description"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_japanese_name"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:background="@drawable/shape_rounded_corner"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        android:alpha="0.5"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/contentsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/appNameTextView"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/userTopLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/shape_circle"
                android:contentDescription="@string/create_account_icon_text"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/create_account_username_hint"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/userNameText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:background="@drawable/shape_rounded_corner"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="@string/login_email_hint"
                    android:hint="@string/create_account_username_hint"
                    android:inputType="textEmailAddress"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="4dp"
                android:text="@string/create_account_email_hint"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_rounded_corner"
                android:padding="5dp"
                android:autofillHints="@string/create_account_email_hint"
                android:hint="@string/create_account_email_hint"
                android:inputType="textEmailAddress"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="4dp"
                android:text="@string/create_account_password_hint"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_rounded_corner"
                android:padding="5dp"
                android:layout_marginTop="4dp"
                android:autofillHints="@string/create_account_password_hint"
                android:hint="@string/create_account_password_hint"
                android:inputType="textPassword"
                tools:ignore="VisualLintTextFieldSize" />
            <EditText
                android:id="@+id/passwordVerificationText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_rounded_corner"
                android:padding="5dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/create_account_password_verification_hint"
                android:hint="@string/create_account_password_verification_hint"
                android:inputType="textPassword"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="4dp"
                android:text="@string/create_account_origin_hint"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/originSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:layout_marginTop="4dp"
                android:entries="@array/prefectures_item"
                android:background="@drawable/shape_rounded_corner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/activityArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="4dp"
                android:text="@string/create_account_activity_area_hint"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/activityAreaSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:layout_marginTop="4dp"
                android:entries="@array/activity_area_item"
                android:background="@drawable/shape_rounded_corner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="4dp"
                android:text="@string/create_account_likes_hint"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/likesSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:layout_marginTop="4dp"
                android:entries="@array/likes_item"
                android:background="@drawable/shape_rounded_corner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/create_account_introduction_hint"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/introductionText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textSize="14sp"
                android:background="@drawable/shape_rounded_corner"
                android:padding="5dp"
                android:gravity="top|start"
                android:layout_marginTop="4dp"
                android:autofillHints="create_account_example_introduction"
                android:hint="@string/create_account_example_introduction"
                android:inputType="textMultiLine"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>


        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/create_account_button_text"
            android:textColor="@color/black"
            android:alpha="0.9"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>